--- a/addons/hw_drivers/views/pos_display.html
+++ b/addons/hw_drivers/views/pos_display.html
@@ -19,7 +19,7 @@
         </style>
         <style>
             body {
-                background: linear-gradient(to right bottom, #77717e, #c9a8a9);
+                background: linear-gradient(to right bottom, #77717e, #00BCD4);
                 height: 100vh;
             }
             .pos-display-status {
